# servatui

./: AGENTS.md  Cargo.toml
examples/: echo.rs
src/: connection.rs  console.rs  lib.rs  protocol.rs  server.rs  step.rs  tui.rs
tests/: integration.rs  ioprovider_tests.rs
