[package]
name = "servyi-servatui"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Generic server-client framework with TUI/CLI frontends. Define protocols with type-safe builder chains."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
servyi-ioprovider = { git = "https://github.com/servyi/ioprovider.git" }
tokio = { version = "1", features = ["macros", "rt"] }
tokio-test = "0.4"
